--- a/Matricula/Matricula.html
+++ b/Matricula/Matricula.html
@@ -52,14 +52,12 @@
         <label class="nombre">Nombre del estudiante</label>
         <input type="text" id="nombre" class="form-control" required />
 
-        <label class="celular">Celular</label>
-        <input type="text" id="celular" class="form-control" required />
+        <label class="email">Email</label>
+        <input type="text" id="email" class="form-control" required />
 
-        <label class="email">Correo</label>
-        <input type="text" id="correo" class="form-control" required />
-
-        <label class="direccion">Dirección</label>
-         <input type="text" id="direccion" class="form-control" required />
+        <label class="idCarrera">Dirección</label>
+         <input type="text" id="Dirección" class="form-control" required />
+        <select id="cmbCarreras" class="form-select"></select>
 
         <button type="submit" id="btn-save" class="btn btn-primary m-3">
           Guardar
