--- a/Área_Principal.html
+++ b/Área_Principal.html
@@ -19,6 +19,7 @@
       <li><a href="Cursos/Cursos.html">Cursos</a></li>
       <li><a href="Estudiantes/Estudiantes.html">Estudiantes</a></li>
       <li><a href="Profesores/Profesores.html">Profesores</a></li>
+      <li><a href="Matricula/Matricula.html">Matricular</a></li>
        <li><a href="Login/Login.html">Salir</a></li>
     </ul>
   </nav>
