--- a/Matricula/Matricula.html
+++ b/Matricula/Matricula.html
@@ -19,7 +19,7 @@
 <body>
     <!-- encabezado de cuerpo de la pagina-->
   <header>
-         <h1 id="main-tittle" class="title">Mantenimiento de Estudiantes</h1>
+         <h1 id="main-tittle" class="title">Matrícula de Estudiantes</h1>
   <!-- menu -->
   <nav class="menu">
     <ul>
@@ -28,36 +28,38 @@
     </ul>
   </nav>
   </header>
-     <h1 id="main-tittle" class="title">Listado de Estudiantes</h1>
+     <h1 id="main-tittle" class="title">Lista de Matrículas</h1>
   <div class="container mt-5">
           <table class="table table-striped table-bordered mt-3">
     <thead class="table-dark">
         <tr>
-            <th class="col-codigo">Nombre</th>
-            <th class="col-codigo">Email</th>
-            <th class="col-codigo">Correo</th>
-             <th class="col-codigo">Dirección</th>
+            <th class="col-codigo">Nombre del estudiante</th>
+            <th class="col-codigo">Carrera</th>
+            <th class="col-codigo">Créditos</th>
+             <th class="col-codigo">Nivel Académico</th>
             <th class="col-codigo">Acción</th>
             <th class="col-codigo">Acción</th>
         </tr>
     </thead>
-    <tbody id="tablaEstudiantes"></tbody>
+    <tbody id="tablaMatriculas"></tbody>
 </table>
       <!-- formulario -->
       <form id="estudiante-form">
         <h1 id="form-title" class="title2">Registrar</h1>
 
-        <input type="hidden" id="idEstudiante" />
+        <input type="hidden" id="idMatricula" />
 
         <label class="nombre">Nombre del estudiante</label>
-        <input type="text" id="nombre" class="form-control" required />
+        <select id="cmbEstudiantes" class="form-select"></select>
 
-        <label class="email">Email</label>
-        <input type="text" id="email" class="form-control" required />
-
-        <label class="idCarrera">Dirección</label>
-         <input type="text" id="Dirección" class="form-control" required />
+        <label class="carrears">Carrera</label>
         <select id="cmbCarreras" class="form-select"></select>
+
+        <label class="creditos">Total de Créditos</label>
+        <input type="text" id="creditos" class="form-control" required />
+
+        <label class="idCarrera">Nivel Académico</label>
+        <select id="cmbNivelAcademico" class="form-select"></select>
 
         <button type="submit" id="btn-save" class="btn btn-primary m-3">
           Guardar
@@ -74,7 +76,7 @@
         <div id="status" class="mt-3"></div>
       </form>
     </div>
-    <script type="module" src="../appEstudiantes.js"></script>
+    <script type="module" src="../appMatricula.js"></script>
 
 </body>
 </html>
