--- a/Estudiantes/Estudiantes.html
+++ b/Estudiantes/Estudiantes.html
@@ -35,7 +35,7 @@
         <tr>
             <th class="col-codigo">Nombre</th>
             <th class="col-codigo">Email</th>
-            <th class="col-codigo">Correo</th>
+            <th class="col-codigo">Celular</th>
              <th class="col-codigo">Dirección</th>
             <th class="col-codigo">Acción</th>
             <th class="col-codigo">Acción</th>
