--- a/Cursos/Cursos.html
+++ b/Cursos/Cursos.html
@@ -36,6 +36,7 @@
             <th class="col-codigo">Código</th>
             <th class="col-codigo">Nombre</th>
             <th class="col-codigo">Créditos</th>
+            <th class="col-codigo">Carrera</th>
             <th class="col-codigo">Acción</th>
              <th class="col-codigo">Acción</th>
         </tr>
@@ -63,6 +64,9 @@
           required
           min="1"
           max="5" />
+
+        <label class="idCarrera">Carrera</label>
+        <select id="cmbCarreras" class="form-select"></select>
 
         <button type="submit" id="btn-save" class="btn btn-primary m-3">
           Guardar
