--- a/Matricula/Matricula.html
+++ b/Matricula/Matricula.html
@@ -35,8 +35,11 @@
         <tr>
             <th class="col-codigo">Nombre del estudiante</th>
             <th class="col-codigo">Carrera</th>
+            <th class="col-codigo">Cursoo</th>
             <th class="col-codigo">Créditos</th>
-             <th class="col-codigo">Nivel Académico</th>
+            <th class="col-codigo">Nivel Académico</th>
+            <th class="col-codigo">Año</th>
+            <th class="col-codigo">Periódo</th>
             <th class="col-codigo">Acción</th>
             <th class="col-codigo">Acción</th>
         </tr>
@@ -55,11 +58,20 @@
         <label class="carrears">Carrera</label>
         <select id="cmbCarreras" class="form-select"></select>
 
+         <label class="cursos">Cursos</label>
+        <select id="cmbCursos" class="form-select"></select>
+
         <label class="creditos">Total de Créditos</label>
         <input type="text" id="creditos" class="form-control" required />
 
         <label class="idCarrera">Nivel Académico</label>
         <select id="cmbNivelAcademico" class="form-select"></select>
+
+        <label class="idCarrera">Año</label>
+        <select id="cmbAño" class="form-select"></select>
+
+        <label class="idCarrera">Periódo</label>
+        <select id="cmbPeriodo" class="form-select"></select>
 
         <button type="submit" id="btn-save" class="btn btn-primary m-3">
           Guardar
