Agregar campo "Nivel Académico" en el formulario de cursos y corregir etiqueta "Periódo" a "Periodo" en la tabla de matrícula

--- a/Cursos/Cursos.html
+++ b/Cursos/Cursos.html
@@ -50,6 +50,9 @@
         <br />
         <input type="hidden" id="id" />
 
+        <label class="idCarrera">Nivel Académico</label>
+        <select id="cmbNivelAcademico" class="form-select"></select>
+
         <label class="form-label" >Código</label>
         <input type="text" id="codigo" class="form-control" required />
 
