--- a/Matricula/Matricula.html
+++ b/Matricula/Matricula.html
@@ -38,7 +38,7 @@
             <th class="col-codigo">Cursoo</th>
             <th class="col-codigo">Créditos</th>
             <th class="col-codigo">Nivel Académico</th>
-            <th class="col-codigo">Periódo</th>
+            <th class="col-codigo">Periodo</th>
             <th class="col-codigo">Año</th>
             <th class="col-codigo">Acción</th>
             <th class="col-codigo">Acción</th>
@@ -62,15 +62,12 @@
         <select id="cmbCursos" class="form-select"></select>
 
         <label class="creditos">Total de Créditos</label>
-        <input type="text" id="creditos" class="form-control" required />
-
-        <label class="idCarrera">Nivel Académico</label>
-        <select id="cmbNivelAcademico" class="form-select"></select>
+        <input type="text" id="creditos" class="form-control" required />   
 
         <label class="idCarrera">Año</label>
         <select id="cmbAño" class="form-select"></select>
 
-        <label class="idCarrera">Periódo</label>
+        <label class="idCarrera">Periodo</label>
         <select id="cmbPeriodo" class="form-select"></select>
 
         <button type="submit" id="btn-save" class="btn btn-primary m-3">
