--- a/Cursos/Cursos.html
+++ b/Cursos/Cursos.html
@@ -37,6 +37,7 @@
             <th class="col-codigo">Nombre</th>
             <th class="col-codigo">Créditos</th>
             <th class="col-codigo">Carrera</th>
+            <th class="col-codigo">Nivel Académico</th>
             <th class="col-codigo">Acción</th>
              <th class="col-codigo">Acción</th>
         </tr>
