--- a/Profesores/Profesores.html
+++ b/Profesores/Profesores.html
@@ -46,7 +46,7 @@
 </table>
 <!-- formulario -->
       <form id="profesor-form">
-        <h1 id="main-tittle" class="title2">Registrar</h1>
+        <h1 id="form-title" class="title2">Registrar</h1>
 
         <input type="hidden" id="id" />
 
