--- a/Matricula/Matricula.html
+++ b/Matricula/Matricula.html
@@ -35,8 +35,9 @@
         <tr>
             <th class="col-codigo">Nombre del estudiante</th>
             <th class="col-codigo">Carrera</th>
-            <th class="col-codigo">Cursoo</th>
+            <th class="col-codigo">Curso</th>
             <th class="col-codigo">Créditos</th>
+            <th class="col-codigo">Nivel Académico</th>
             <th class="col-codigo">Periodo</th>
             <th class="col-codigo">Año</th>
             <th class="col-codigo">Acción</th>
@@ -57,11 +58,14 @@
         <label class="carrears">Carrera</label>
         <select id="cmbCarreras" class="form-select"></select>
 
-         <label class="cursos">Cursos</label>
+        <label class="cursos">Cursos</label>
         <select id="cmbCursos" class="form-select"></select>
 
         <label class="creditos">Total de Créditos</label>
         <input type="text" id="creditos" class="form-control" required />   
+
+        <label class="idCarrera">Nivel Académico</label>
+        <select id="cmbNivelAcademico" class="form-select"></select>
 
         <label class="idCarrera">Año</label>
         <select id="cmbAño" class="form-select"></select>
